# duck-orch

./: .gitignore  CMakeLists.txt  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  extension_config.cmake
.cache/clangd/: compile_commands.json
.cache/clangd/release/: compile_commands.json
crates/orch_cli/: Cargo.toml
crates/orch_cli/src/: main.rs
crates/orch_common/: Cargo.toml
crates/orch_common/src/: ffi.rs  lib.rs  task.rs
crates/orch_core/: Cargo.toml
crates/orch_core/src/: dag.rs  ffi.rs  lib.rs  lineage.rs  mermaid.rs  openlineage.rs  task_parser.rs  templating.rs
crates/orch_dag/: Cargo.toml
crates/orch_dag/src/: lib.rs  mermaid.rs
crates/orch_lineage/: Cargo.toml
crates/orch_lineage/src/: column.rs  lib.rs
crates/orch_ol/: Cargo.toml
crates/orch_ol/src/: lib.rs
crates/orch_runtime/: Cargo.toml
crates/orch_runtime/src/: lib.rs  parser.rs  templating.rs
src/: duckorch_extension.cpp
src/include/: duckorch.h  duckorch_extension.hpp
tasks/example/: clean_orders.sql  clean_users.sql  orch.toml  revenue_daily.sql  user_stats.sql
