[workspace]
members = [
    "crates/orch_common",
    "crates/orch_dag",
    "crates/orch_lineage",
    "crates/orch_runtime",
    "crates/orch_ol",
    "crates/orch_core",
    "crates/orch_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
lto = false
