[package]
name = "duckorch_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

# Sub-crates
[dependencies]
orch_common = { path = "../orch_common" }
orch_dag = { path = "../orch_dag" }
orch_lineage = { path = "../orch_lineage" }
orch_runtime = { path = "../orch_runtime" }
orch_ol = { path = "../orch_ol" }

# External deps still used at this layer (FFI shims)
serde_json = "1"
walkdir = "2"
